feat: add recent projects section to home page

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -52,5 +52,21 @@
             </div>
         </div>
         
+        <div id="recentprojects-container">
+            <div id="recentprojects-scope">
+                <h3>Our Recent Projects</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+            <div id="recentprojects-gallery">
+                <img src="../../assets/home/recentprojects/img1.png" alt="">
+                <img src="../../assets/home/recentprojects/img2.png" alt="">
+                <img src="../../assets/home/recentprojects/img3.png" alt="">
+                <img src="../../assets/home/recentprojects/img4.png" alt="">
+                <img src="../../assets/home/recentprojects/img5.png" alt="">
+                <img src="../../assets/home/recentprojects/img6.png" alt="">
+            </div>
+            <button>SEE ALL</button>
+        </div>
+
     </body>
 </html>
