feat: add lorem ipsum section to home page

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -68,5 +68,22 @@
             <button>SEE ALL</button>
         </div>
 
+        <div id="loremipsum-container">
+            <div id="loremipsum-scope">
+                <h3>Lorem Ipsum</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+            <div id="loremipsum-card">
+                <div id="loremipsum-desc">
+                    <h3>Stay in the loop</h4>
+                    <p>Subscribe to receive the latest news and updates about TDA. We promise not to spam you! </p>
+                </div>
+                <div id="loremipsum-inputgroup">
+                    <input type="email" placeholder="Enter email address">
+                    <button>Continue</button>
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
