add plataform games section to home page

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -51,7 +51,63 @@
                 </div>
             </div>
         </div>
-        
+
+        <div id="plataform-games-container">
+            <div id="plataform-games-scope">
+                <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+            </div>
+            <div id="plataform-games-gallery">
+                <div class="plataform-games-cards">
+                    <div>
+                        <img src="../../assets/home/plataform-games/icon-mobile.svg" alt="">
+                    </div>
+                    <p>Mobile Game Development</p>
+                    <img src="../../assets/home/plataform-games/icon-arrow.svg" alt="">
+                </div>
+
+                <div class="plataform-games-cards">
+                    <div>
+                        <img src="../../assets/home/plataform-games/icon-pc.svg" alt="">
+                    </div>
+                    <p>PC Game Development</p>
+                    <img src="../../assets/home/plataform-games/icon-arrow.svg" alt="">
+                </div>
+
+                <div class="plataform-games-cards">
+                    <div>
+                        <img src="../../assets/home/plataform-games/icon-ps4.svg" alt="">
+                    </div>
+                    <p>PS4 Game Development</p>
+                    <img src="../../assets/home/plataform-games/icon-arrow.svg" alt="">
+                </div>
+
+                <div class="plataform-games-cards">
+                    <div>
+                        <img src="../../assets/home/plataform-games/icon-glasses.svg" alt="">
+                    </div>
+                    <p>AR/VR Solutions</p>
+                    <img src="../../assets/home/plataform-games/icon-arrow.svg" alt="">
+                </div>
+
+                <div class="plataform-games-cards">
+                    <div>
+                        <img src="../../assets/home/plataform-games/icon-desktop.svg" alt="">
+                    </div>
+                    <p>AR/ VR design</p>
+                    <img src="../../assets/home/plataform-games/icon-arrow.svg" alt="">
+                </div>
+
+                <div class="plataform-games-cards">
+                    <div>
+                        <img src="../../assets/home/plataform-games/icon-3d.svg" alt="">
+                    </div>
+                    <p>3D Modelings</p>
+                    <img src="../../assets/home/plataform-games/icon-arrow.svg" alt="">
+                </div>
+            </div>
+        </div>
+
         <div id="recentprojects-container">
             <div id="recentprojects-scope">
                 <h3>Our Recent Projects</h3>
@@ -85,5 +141,7 @@
             </div>
         </div>
 
+
+        
     </body>
 </html>
