add about section to home page

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -52,6 +52,20 @@
             </div>
         </div>
 
+        <div id="about-container">
+            <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
+            <div>
+                <div id="about-scope">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                </div>
+                <div id="about-images">
+                    <img src="../../assets/home/about/icon-points.svg" alt="">
+                    <img src="../../assets/home/about/img-spiderman.png" alt="">
+                </div>
+            </div>
+        </div>
+
         <div id="plataform-games-container">
             <div id="plataform-games-scope">
                 <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h3>
@@ -140,7 +154,6 @@
                 </div>
             </div>
         </div>
-
 
         
     </body>
