feat: add lorem ipsum section to contact-us page

--- a/pages/contact-us/contact-us.html
+++ b/pages/contact-us/contact-us.html
@@ -48,5 +48,23 @@
             </div>
         </section>
 
+
+        <section id="loremipsum-container">
+            <div id="loremipsum-scope">
+                <h3>Lorem Ipsum</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+            <div id="loremipsum-card">
+                <div id="loremipsum-desc">
+                    <h3>Stay in the loop</h4>
+                    <p>vhvvvvVH <p>We promise not to spam you! </p></p>
+                </div>
+                <div id="loremipsum-inputgroup">
+                    <input type="email" placeholder="Enter email address">
+                    <button>Continue</button>
+                </div>
+            </div>
+        </section>
+
     </body>
 </html>
