feat: add front section to contact-us page

--- a/pages/contact-us/contact-us.html
+++ b/pages/contact-us/contact-us.html
@@ -11,6 +11,53 @@
     </head>
     <body>
 
+
+        <section id="front-container">
+            <div id="front-scope">
+                <h6>Home > <span>Contact us</span></h6>
+                <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            </div>
+            <img src="../../assets/contact-us/front/img-map.png" alt="">
+
+
+            <div id="front-contacts-layout">
+                <div id="front-contacts-socialmedia">
+                    <h4>Follow us</h4>
+                    <div id="socialmedia-gallery">
+                        <div class="socialmedia-link">
+                            <img src="../../assets/contact-us/front/icon-facebook.svg" alt="icon-facebook">
+                        </div>
+                        <div class="socialmedia-link">
+                            <img src="../../assets/contact-us/front/icon-instagram.svg" alt="icon-instagram">
+                        </div>
+                        <div class="socialmedia-link">
+                            <img src="../../assets/contact-us/front/icon-twitter.svg" alt="icon-twitter">
+                        </div>
+                        <div class="socialmedia-link">
+                            <img src="../../assets/contact-us/front/icon-linkedin.svg" alt="icon-linkedin">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="front-horizontal-line"></div>
+
+                <div id="front-contacts-phone">
+                    <img src="../../assets/contact-us/front/icon-phone.svg" alt="">
+                    <h2>+94 4444 5555 6</h2>
+                </div>
+
+                <div class="front-horizontal-line"></div>
+                
+                <div id="front-contacts-loc">
+                    <img src="../../assets/contact-us/front/icon-gps.svg" alt="">
+                    <h2>but also the leap into electronic typesetting</h2>
+                </div>
+            </div>
+
+
+        </section>
+
         <section id="form-registration-container">
             <img src="../../assets/contact-us/form/orange-line.svg" alt="" id="form-orange-line">
             <img src="../../assets/contact-us/form/white-line.svg" alt="" id="form-white-line">
@@ -47,7 +94,6 @@
                 </form>
             </div>
         </section>
-
 
         <section id="loremipsum-container">
             <div id="loremipsum-scope">
