feat: add front section to home page

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -11,7 +11,22 @@
     </head>
     <body>
 
-        <div id="ctgames-container">
+
+
+        
+
+        <section id="front-container">
+            <div id="front-about">
+                <h2>Proved By prodesigner</h2>
+                <h1>Work that we produce for our clients</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+                <button>Get more details</button>
+            </div>
+
+            <img src="../../assets/home/front/img-joystick.png" alt="img-joystick" id="front-joystick">
+        </section>
+
+        <section id="ctgames-container">
             <div id="ctgames-scope">
                 <h3>Currently Trending Games</h3>
                 <button>SEE ALL</button>
@@ -50,9 +65,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div id="about-container">
+        <section id="about-container">
             <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h2>
             <div>
                 <div id="about-scope">
@@ -64,9 +79,9 @@
                     <img src="../../assets/home/about/img-spiderman.png" alt="">
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div id="plataform-games-container">
+        <section id="plataform-games-container">
             <div id="plataform-games-scope">
                 <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
@@ -120,9 +135,9 @@
                     <img src="../../assets/home/plataform-games/icon-arrow.svg" alt="">
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div id="recentprojects-container">
+        <section id="recentprojects-container">
             <div id="recentprojects-scope">
                 <h3>Our Recent Projects</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
@@ -136,9 +151,9 @@
                 <img src="../../assets/home/recentprojects/img6.png" alt="">
             </div>
             <button>SEE ALL</button>
-        </div>
+        </section>
 
-        <div id="loremipsum-container">
+        <section id="loremipsum-container">
             <div id="loremipsum-scope">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
@@ -153,7 +168,7 @@
                     <button>Continue</button>
                 </div>
             </div>
-        </div>
+        </section>
 
         
     </body>
