feat: add social media links to footer

--- a/pages/footer/footer.html
+++ b/pages/footer/footer.html
@@ -37,26 +37,27 @@
                 </div>
 
                 <div id="footer-socialmedia">
-                    <div id="footer-socialmedia-links">
+                    <div class="footer-socialmedia-links" data-url="https://www.facebook.com">
                         <img src="../../assets/footer/icon-facebook.svg" alt="">
                     </div>
-                    <div id="footer-socialmedia-links">
+                    <div class="footer-socialmedia-links" data-url="https://www.instagram.com">
                         <img src="../../assets/footer/icon-instagram.svg" alt="">
                     </div>
-                    <div id="footer-socialmedia-links">
+                    <div class="footer-socialmedia-links"  data-url="https://www.twitter.com">
                         <img src="../../assets/footer/icon-twitter.svg" alt="">
                     </div>
-                    <div id="footer-socialmedia-links">
+                    <div class="footer-socialmedia-links" data-url="https://www.linkedin.com">
                         <img src="../../assets/footer/icon-linkedin.svg" alt="">
                     </div>
                 </div>
-
             </div>
-
 
             <div id="footer-copyright">
                 <p>Copyright ® 2022 prodesigner All rights Rcerved</p>
             </div>
+
+
+            <script src="footer.js"></script>
         </footer>
     </body>
 </html>
