feat: add email validation on home page

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -164,12 +164,14 @@
                     <p>Subscribe to receive the latest news and updates about TDA. We promise not to spam you! </p>
                 </div>
                 <div id="loremipsum-inputgroup">
-                    <input type="email" placeholder="Enter email address">
-                    <button>Continue</button>
+                    <input type="email" name="email" id="loremipsum-inputgroup-input" placeholder="Enter email address">
+                    <button id="loremipsum-inputgroup-button">Continue</button>
                 </div>
             </div>
         </section>
 
-        
+
+
+        <script type="module" src="home.js"></script>
     </body>
 </html>
