--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-      <script src="" async defer></script>
+      <script src=""></script>
     </body>
 </html>
