feat: add responsive design to home page

--- a/pages/error/error.html
+++ b/pages/error/error.html
@@ -13,8 +13,8 @@
         <section id="error-container">
             <div id="error-layout">
                 <img class="spin" src="../../assets/error/img-eng.png" alt="img-eng">
-                <h1>A página que você procura não pode ser encontrada.</h1>
-                <button>Página Inicial</button>
+                <h1>The page you are looking for cannot be found.</h1>
+                <button>Home Page</button>
             </div>
         </section>
 
