--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="home.css">
         <link rel="stylesheet" href="../../index.css">
+        <link rel="stylesheet" href="../../global.css">
     </head>
     <body>
         <main id="home-container">
