--- a/pages/error/error.html
+++ b/pages/error/error.html
@@ -12,9 +12,9 @@
     <body>
         <section id="error-container">
             <div id="error-layout">
-                <img class="spin" src="../../assets/error/img-eng.png" alt="img-eng">
+                <img src="../../assets/error/img-joystick.jpg" alt="img-eng">
                 <h1>The page you are looking for cannot be found.</h1>
-                <button>Home Page</button>
+                <button>Go to Home Page</button>
             </div>
         </section>
 
