--- a/pages/footer/footer.html
+++ b/pages/footer/footer.html
@@ -21,12 +21,10 @@
                 <div id="footer-about">
                     <h2>About us</h2>
                     <nav>
-                        <ul>
-                            <li>Zeux</li>
-                            <li>Portfolio</li>
-                            <li>Careers</li>
-                            <li>Contact us</li>
-                        </ul>
+                        <a href="">Zeux</a>
+                        <a href="">Portfolio</a>
+                        <a href="">Careers</a>
+                        <a href="">Contact us</a>
                     </nav>
                 </div>
 
