--- a/pages/header/header.html
+++ b/pages/header/header.html
@@ -18,12 +18,10 @@
 
             <div id="nav-container">
                 <nav>
-                    <ul>
-                        <li>Home</li>
-                        <li>About us</li>
-                        <li>Portfolio</li>
-                        <li>News</li>
-                    </ul>
+                    <a href="">Home</a>
+                    <a href="">About us</a>
+                    <a href="">Portfolio</a>
+                    <a href="">News</a>
                 </nav>
                 <button>Contact Us</button>
             </div>
