--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -9,8 +9,26 @@
         <link rel="stylesheet" href="home.css">
         <link rel="stylesheet" href="../../index.css">
         <link rel="stylesheet" href="../../global.css">
+        <link rel="stylesheet" href="../../popup/popup.css">
     </head>
     <body>
+        <div id="modal" class="modal">
+            <div class="modal-container">
+                <h2>Form submission failed. Please fill out all required fields correctly.</h2>
+
+                <div class="modal-errors">
+                    <div class="modal-errors-card">
+                        <h3 class="modal-errors-fieldname"></h3>
+                        <div class="modal-errors-messages">
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+                <button class="cancel-modal">Voltar</button>
+            </div>
+        </div>
+
+
         <main id="home-container">
             <section id="front-container">
                 <div id="front-about">
