style: fix indentation and remove whitespace

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="popup.css">
-        <link rel="stylesheet" href="../index.css">
-    </head>
-    <body>
-        <div id="modal" class="modal">
-            <div class="modal-container">
-                <h2></h2>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="popup.css" />
+    <link rel="stylesheet" href="../index.css" />
+  </head>
+  <body>
+    <div id="modal" class="modal">
+      <div class="modal-container">
+        <h2></h2>
 
-                <div class="modal-errors">
-                    <div class="modal-errors-card">
-                        <h3 class="modal-errors-fieldname"></h3>
-                        <div class="modal-errors-messages">
-                            <p></p>
-                        </div>
-                    </div>
-                </div>
-                <button class="cancel-modal">Voltar</button>
+        <div class="modal-errors">
+          <div class="modal-errors-card">
+            <h3 class="modal-errors-fieldname"></h3>
+            <div class="modal-errors-messages">
+              <p></p>
             </div>
+          </div>
         </div>
-        <script src="popup.js"></script>
-    </body>
+        <button class="cancel-modal">Voltar</button>
+      </div>
+    </div>
+    <script src="popup.js"></script>
+  </body>
 </html>
