--- a/pages/error/error.html
+++ b/pages/error/error.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="error.css">
-        <link rel="stylesheet" href="../../index.css">
-    </head>
-    <body>
-        <section id="error-container">
-            <div id="error-layout">
-                <img src="../../assets/error/img-joystick.jpg" alt="img-eng">
-                <h1>The page you are looking for cannot be found.</h1>
-                <button>Go to Home Page</button>
-            </div>
-        </section>
-
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="error.css" />
+    <link rel="stylesheet" href="../../index.css" />
+  </head>
+  <body>
+    <section id="error-container">
+      <div id="error-layout">
+        <img src="../../assets/error/img-joystick.jpg" alt="img-eng" />
+        <h1>The page you are looking for cannot be found.</h1>
+        <button>Go to Home Page</button>
+      </div>
+    </section>
+  </body>
 </html>
