--- a/pages/header/header.html
+++ b/pages/header/header.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="header.css">
-        <link rel="stylesheet" href="../../index.css">
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="../../index.css" />
+  </head>
+  <body>
+    <header>
+      <div id="logo-container">
+        <h1>LOGO</h1>
+      </div>
 
-        <header>
-            <div id="logo-container">
-                <h1>LOGO</h1>
-            </div>
-
-            <div id="nav-container">
-                <nav>
-                    <a href="">Home</a>
-                    <a href="">About us</a>
-                    <a href="">Portfolio</a>
-                    <a href="">News</a>
-                </nav>
-                <button>Contact Us</button>
-            </div>
-        </header>
-        
-    </body>
+      <div id="nav-container">
+        <nav>
+          <a href="">Home</a>
+          <a href="">About us</a>
+          <a href="">Portfolio</a>
+          <a href="">News</a>
+        </nav>
+        <button>Contact Us</button>
+      </div>
+    </header>
+  </body>
 </html>
