feat: add  navigation links between pages

--- a/pages/error/error.html
+++ b/pages/error/error.html
@@ -10,12 +10,14 @@
     <link rel="stylesheet" href="../../index.css" />
   </head>
   <body>
-    <section id="error-container">
+    <main id="error-container">
       <div id="error-layout">
         <img src="../../assets/error/img-joystick.jpg" alt="img-eng" />
         <h1>The page you are looking for cannot be found.</h1>
-        <button>Go to Home Page</button>
+        <button onclick="router('/')">Go to Home Page</button>
       </div>
-    </section>
+    </main>
+
+    <script src="../../scripts/router.js"></script>
   </body>
 </html>
