--- a/pages/footer/footer.html
+++ b/pages/footer/footer.html
@@ -13,7 +13,7 @@
     <footer>
       <div id="footer-layout">
         <div id="footer-logo">
-          <h1>LOGO</h1>
+          <h1 onclick="router('/')">LOGO</h1>
           <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry.
@@ -24,10 +24,10 @@
         <div id="footer-about">
           <h2>About us</h2>
           <nav>
-            <a href="">Zeux</a>
-            <a href="">Portfolio</a>
-            <a href="">Careers</a>
-            <a href="">Contact us</a>
+            <a href="/../../pages/error/error.html">Zeux</a>
+            <a href="/../../pages/error/error.html">Portfolio</a>
+            <a href="/../../pages/error/error.html">Careers</a>
+            <a href="/../../pages/error/error.html">Contact us</a>
           </nav>
         </div>
 
@@ -71,8 +71,8 @@
       <div id="footer-copyright">
         <p>Copyright ® 2022 prodesigner All rights Rcerved</p>
       </div>
-
-      <script src="footer.js"></script>
     </footer>
+
+    <script src="footer.js"></script>
   </body>
 </html>
