--- a/pages/contact-us/contact-us.html
+++ b/pages/contact-us/contact-us.html
@@ -10,8 +10,30 @@
     <link rel="stylesheet" href="../../index.css" />
     <link rel="stylesheet" href="../../global.css" />
     <link rel="stylesheet" href="../../popup/popup.css" />
+    
+    <link rel="stylesheet" href="../../pages/header/header.css" />
+    <link rel="stylesheet" href="../../pages/footer/footer.css" />
   </head>
   <body>
+    <header>
+      <div id="logo-container" onclick="router('/')">
+        <h1>LOGO</h1>
+      </div>
+
+      <div id="nav-container">
+        <nav>
+          <a href="/">Home</a>
+          <a href="../error/error.html">About us</a>
+          <a href="../error/error.html">Portfolio</a>
+          <a href="../error/error.html">News</a>
+        </nav>
+        <button onclick="router('/pages/contact-us/contact-us.html')">Contact Us</button>
+      </div>
+    </header>
+
+
+
+
     <div id="modal" class="modal">
       <div class="modal-container">
         <h2>
@@ -182,6 +204,77 @@
       </section>
     </main>
 
+
+
+
+    <footer>
+      <div id="footer-layout">
+        <div id="footer-logo">
+          <h1 onclick="router('/')">LOGO</h1>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </p>
+          <h6>@Logo</h6>
+        </div>
+
+        <div id="footer-about">
+          <h2>About us</h2>
+          <nav>
+            <a href="/../../pages/error/error.html">Zeux</a>
+            <a href="/../../pages/error/error.html">Portfolio</a>
+            <a href="/../../pages/error/error.html">Careers</a>
+            <a href="/../../pages/error/error.html">Contact us</a>
+          </nav>
+        </div>
+
+        <div id="footer-contacts">
+          <h2>Contact us</h2>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </p>
+          <p>+908 89097 890</p>
+        </div>
+
+        <div id="footer-socialmedia">
+          <div
+            class="footer-socialmedia-links"
+            data-url="https://www.facebook.com"
+          >
+            <img src="../../assets/footer/icon-facebook.svg" alt="" />
+          </div>
+          <div
+            class="footer-socialmedia-links"
+            data-url="https://www.instagram.com"
+          >
+            <img src="../../assets/footer/icon-instagram.svg" alt="" />
+          </div>
+          <div
+            class="footer-socialmedia-links"
+            data-url="https://www.twitter.com"
+          >
+            <img src="../../assets/footer/icon-twitter.svg" alt="" />
+          </div>
+          <div
+            class="footer-socialmedia-links"
+            data-url="https://www.linkedin.com"
+          >
+            <img src="../../assets/footer/icon-linkedin.svg" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <div id="footer-copyright">
+        <p>Copyright ® 2022 prodesigner All rights Rcerved</p>
+      </div>
+    </footer>
+
+
+
+
+    <script src="../footer/footer.js"></script>
     <script type="module" src="contact-us.js"></script>
+    <script src="../../scripts/router.js"></script>
   </body>
 </html>
