--- a/pages/header/header.html
+++ b/pages/header/header.html
@@ -11,19 +11,23 @@
   </head>
   <body>
     <header>
-      <div id="logo-container">
+      <div id="logo-container" onclick="router('/')">
         <h1>LOGO</h1>
       </div>
 
       <div id="nav-container">
         <nav>
-          <a href="">Home</a>
-          <a href="">About us</a>
-          <a href="">Portfolio</a>
-          <a href="">News</a>
+          <a href="/">Home</a>
+          <a href="../error/error.html">About us</a>
+          <a href="../error/error.html">Portfolio</a>
+          <a href="../error/error.html">News</a>
         </nav>
-        <button>Contact Us</button>
+        <button onclick="router('/pages/contact-us/contact-us.html')">
+          Contact Us
+        </button>
       </div>
     </header>
+
+    <script src="../../scripts/router.js"></script>
   </body>
 </html>
