fix: edit homepage image paths

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <img
-          src="../../assets/home/front/img-joystick.png"
+          src="assets/home/front/img-joystick.png"
           alt="img-joystick"
           id="front-joystick"
         />
@@ -78,33 +78,33 @@
 
         <div id="ctgames-gallery">
           <div class="ctgames-cards hover-effect">
-            <img src="../../assets/home/ct-games/img-game1.png" alt="" />
+            <img src="assets/home/ct-games/img-game1.png" alt="" />
             <div>
-              <img src="../../assets/home/ct-games/icon-fire.svg" alt="" />
+              <img src="assets/home/ct-games/icon-fire.svg" alt="" />
               <p>40 Followers</p>
             </div>
           </div>
 
           <div class="ctgames-cards hover-effect">
-            <img src="../../assets/home/ct-games/img-game2.png" alt="" />
+            <img src="assets/home/ct-games/img-game2.png" alt="" />
             <div>
-              <img src="../../assets/home/ct-games/icon-fire.svg" alt="" />
+              <img src="assets/home/ct-games/icon-fire.svg" alt="" />
               <p>40 Followers</p>
             </div>
           </div>
 
           <div class="ctgames-cards hover-effect">
-            <img src="../../assets/home/ct-games/img-game3.png" alt="" />
+            <img src="assets/home/ct-games/img-game3.png" alt="" />
             <div>
-              <img src="../../assets/home/ct-games/icon-fire.svg" alt="" />
+              <img src="assets/home/ct-games/icon-fire.svg" alt="" />
               <p>40 Followers</p>
             </div>
           </div>
 
           <div class="ctgames-cards hover-effect">
-            <img src="../../assets/home/ct-games/img-game4.png" alt="" />
+            <img src="assets/home/ct-games/img-game4.png" alt="" />
             <div>
-              <img src="../../assets/home/ct-games/icon-fire.svg" alt="" />
+              <img src="assets/home/ct-games/icon-fire.svg" alt="" />
               <p>40 Followers</p>
             </div>
           </div>
@@ -126,8 +126,8 @@
             </p>
           </div>
           <div id="about-images">
-            <img src="../../assets/home/about/icon-points.svg" alt="" />
-            <img src="../../assets/home/about/img-spiderman.png" alt="" />
+            <img src="assets/home/about/icon-points.svg" alt="" />
+            <img src="assets/home/about/img-spiderman.png" alt="" />
           </div>
         </div>
       </section>
@@ -148,24 +148,24 @@
           <div class="plataform-games-cards hover-effect">
             <div>
               <img
-                src="../../assets/home/plataform-games/icon-mobile.svg"
+                src="assets/home/plataform-games/icon-mobile.svg"
                 alt=""
               />
             </div>
             <p>Mobile Game Development</p>
             <img
-              src="../../assets/home/plataform-games/icon-arrow.svg"
+              src="assets/home/plataform-games/icon-arrow.svg"
               alt=""
             />
           </div>
 
           <div class="plataform-games-cards hover-effect">
             <div>
-              <img src="../../assets/home/plataform-games/icon-pc.svg" alt="" />
+              <img src="assets/home/plataform-games/icon-pc.svg" alt="" />
             </div>
             <p>PC Game Development</p>
             <img
-              src="../../assets/home/plataform-games/icon-arrow.svg"
+              src="assets/home/plataform-games/icon-arrow.svg"
               alt=""
             />
           </div>
@@ -173,13 +173,13 @@
           <div class="plataform-games-cards hover-effect">
             <div>
               <img
-                src="../../assets/home/plataform-games/icon-ps4.svg"
+                src="assets/home/plataform-games/icon-ps4.svg"
                 alt=""
               />
             </div>
             <p>PS4 Game Development</p>
             <img
-              src="../../assets/home/plataform-games/icon-arrow.svg"
+              src="assets/home/plataform-games/icon-arrow.svg"
               alt=""
             />
           </div>
@@ -187,13 +187,13 @@
           <div class="plataform-games-cards hover-effect">
             <div>
               <img
-                src="../../assets/home/plataform-games/icon-glasses.svg"
+                src="assets/home/plataform-games/icon-glasses.svg"
                 alt=""
               />
             </div>
             <p>AR/VR Solutions</p>
             <img
-              src="../../assets/home/plataform-games/icon-arrow.svg"
+              src="assets/home/plataform-games/icon-arrow.svg"
               alt=""
             />
           </div>
@@ -201,24 +201,24 @@
           <div class="plataform-games-cards hover-effect">
             <div>
               <img
-                src="../../assets/home/plataform-games/icon-desktop.svg"
+                src="assets/home/plataform-games/icon-desktop.svg"
                 alt=""
               />
             </div>
             <p>AR/ VR design</p>
             <img
-              src="../../assets/home/plataform-games/icon-arrow.svg"
+              src="assets/home/plataform-games/icon-arrow.svg"
               alt=""
             />
           </div>
 
           <div class="plataform-games-cards hover-effect">
             <div>
-              <img src="../../assets/home/plataform-games/icon-3d.svg" alt="" />
+              <img src="assets/home/plataform-games/icon-3d.svg" alt="" />
             </div>
             <p>3D Modelings</p>
             <img
-              src="../../assets/home/plataform-games/icon-arrow.svg"
+              src="assets/home/plataform-games/icon-arrow.svg"
               alt=""
             />
           </div>
@@ -236,32 +236,32 @@
         <div id="recentprojects-gallery">
           <img
             class="hover-effect"
-            src="../../assets/home/recentprojects/img1.png"
+            src="assets/home/recentprojects/img1.png"
             alt=""
           />
           <img
             class="hover-effect"
-            src="../../assets/home/recentprojects/img2.png"
+            src="assets/home/recentprojects/img2.png"
             alt=""
           />
           <img
             class="hover-effect"
-            src="../../assets/home/recentprojects/img3.png"
+            src="assets/home/recentprojects/img3.png"
             alt=""
           />
           <img
             class="hover-effect"
-            src="../../assets/home/recentprojects/img4.png"
+            src="assets/home/recentprojects/img4.png"
             alt=""
           />
           <img
             class="hover-effect"
-            src="../../assets/home/recentprojects/img5.png"
+            src="assets/home/recentprojects/img5.png"
             alt=""
           />
           <img
             class="hover-effect"
-            src="../../assets/home/recentprojects/img6.png"
+            src="assets/home/recentprojects/img6.png"
             alt=""
           />
         </div>
@@ -332,25 +332,25 @@
             class="footer-socialmedia-links"
             data-url="https://www.facebook.com"
           >
-            <img src="../../assets/footer/icon-facebook.svg" alt="" />
+            <img src="assets/footer/icon-facebook.svg" alt="" />
           </div>
           <div
             class="footer-socialmedia-links"
             data-url="https://www.instagram.com"
           >
-            <img src="../../assets/footer/icon-instagram.svg" alt="" />
+            <img src="assets/footer/icon-instagram.svg" alt="" />
           </div>
           <div
             class="footer-socialmedia-links"
             data-url="https://www.twitter.com"
           >
-            <img src="../../assets/footer/icon-twitter.svg" alt="" />
+            <img src="assets/footer/icon-twitter.svg" alt="" />
           </div>
           <div
             class="footer-socialmedia-links"
             data-url="https://www.linkedin.com"
           >
-            <img src="../../assets/footer/icon-linkedin.svg" alt="" />
+            <img src="assets/footer/icon-linkedin.svg" alt="" />
           </div>
         </div>
       </div>
